compiler/tests/fixtures/invalid/semantics/pointer_as_first_path_component.viv
// Pointer as first reference path component

action bad-pointer:
    roles:
        @actor:
            as: initiator
    conditions:
        @actor->mood > 0
